siduxcc (0.9.27) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Fabian Wuertz ]
  * hermes: new and kernel tab added
  * kde: software: tooltips added
  * kde: network: qwhatsthis added
  * icons: hermes icons updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 14 Mar 2008 23:17:16 +0100

siduxcc (0.9.26) unstable; urgency=low

  [ Bernard Gray ]
  * begin work on a new hermes upgrade-ok icon 
  * add new upgrade-warning candidate icon
  * tweak upgrade-ok candidate icon
  * add another upgrade-ok and warning candidate 
  * make sidux-warning5 bg grayscale to enhance warning effect 

  [ Fabian Wuertz ]
  * translation: de: hermes: updated 

 -- Bernard Gray <bernard.gray@gmail.com>  Fri, 14 Mar 2008 01:04:59 +1100

siduxcc (0.9.25) unstable; urgency=low

  * kde: services: descriptions added  
  * hermes: duWarningsDe fixed 

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 13 Mar 2008 00:54:32 +0100

siduxcc (0.9.24) unstable; urgency=low

  [ Bernard Gray ]
  * add hermes notification icon candidate - warning
  * add hermes notification icon candidate - safe

  [ Fabian Wuertz ]
  * cli: url of the kernel package updated

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 12 Mar 2008 00:10:56 +0100

siduxcc (0.9.23) unstable; urgency=low

  [ Fabian Wuertz ]
  * empty icons folders removed
  * kde: software: asv check updated
  * cli: atl2 bug fixed
  * kde: kernel: descriptions for modules added
  * debian: rules file fixed
  * translation: pt fixed

  [ Joaquim Boura ]
  * fixed fr translation. thanks to alphad. 
  * added the pt language files. Thanks to Rui Umbelino (VaMPiRiC_CRoW)

  [ Stefan Lippers-Hollmann ]
  * really fix debian/rules PNG generation.
  * generate PNGs from SVG.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 10 Mar 2008 23:39:57 +0100

siduxcc (0.9.22) unstable; urgency=low

  * all icons moved to the icon folder
  * cli: display: fix-res problem solved
