@@ -89,6 +89,22 @@
         </widget>
         <widget class="QLabel">
             <property name="name">
+                <cstring>textLabel1</cstring>
+            </property>
+            <property name="geometry">
+                <rect>
+                    <x>70</x>
+                    <y>30</y>
+                    <width>260</width>
+                    <height>21</height>
+                </rect>
+            </property>
+            <property name="text">
+                <string>No dist-upgrade warnings.</string>
+            </property>
+        </widget>
+        <widget class="QLabel">
+            <property name="name">
                 <cstring>duwarnerPixmap</cstring>
             </property>
             <property name="geometry">
@@ -125,22 +141,6 @@
                 <bool>true</bool>
             </property>
         </widget>
-        <widget class="QLabel">
-            <property name="name">
-                <cstring>textLabel1</cstring>
-            </property>
-            <property name="geometry">
-                <rect>
-                    <x>70</x>
-                    <y>30</y>
-                    <width>260</width>
-                    <height>21</height>
-                </rect>
-            </property>
-            <property name="text">
-                <string>No dist-upgrade warnings.</string>
-            </property>
-        </widget>
     </widget>
 </widget>
 <images>
@@ -151,10 +151,10 @@
         <data format="PNG" length="948">89504e470d0a1a0a0000000d4948445200000016000000160806000000c4b46c3b0000037b49444154388da5d46f681b751cc7f1f75d93364997f6d6b49a0ea7155999032145f0cf1496322722cc158cddd4993f623746597d521fec8158f0998a65b82141346914b4b3a02832545c2ac850a9a43eaadb84c4826b236b9baee9a5e972f7f54193344bd35af0073f8ee3b8d7ef739fbbfb292282a228bc79ee6a309fcb465657f47bdf7afdf114ff63880896d289cd5effc6ad7c5db4163a38301e14d30c98628e0c9f7f22ba1d5c0578279af6389d0d1d8aa2fe5879f1b58171cfe0e978a2fdaea6c881a7f67aebac6aa4ffc4c5e076604b313b768715ab852383a7e35a2ebfa2d91bec196b7dddf0a1c37bb9e7be560a0668ae46c63ef939d2f7f2577cf0d1335b26574a1dbffd61f28ba5e46c4f67d72ea626a6697335d273f401eaac160a06140c300c98b9bec885d84fe8fa4a68e4635f4d5c44d6aa0048fe3275b67997931bb3cb74ee7171fc952e6c760baa028a42f97887bb99675f7c8c46a72df2c2b14f37ada50c67966e72edf7bfb02bb7e8e9bdff36ac7454cab8c64b7d4fd27a67f3b0cf17f36c09b7692d19776b13cf3dbf0fb50656395505ec762b47fd073577bb2b5e0b2fc386690e1f3bbe0f87c3b28ea81bc1ca056df67a9e3ef2a0060c57c31680fe1317830f3dd2eeddd3d942c1a88da90a98950b9ad0aa4183b945c7866104bc073bb64c573d5bd251eebe12425ff8a7266c0128980639b30953d65173135055409bfb12f79ffde074d196bac4ee1da7466a262e18059673303d034815a6defe044d8de07615efdedf4b4787f0eea3675e95305aad2a32b33319722b909e5bbb50ab921d0e68dd09290e10bd1a826fdf87fdbde0daed01e295b85afc224217623f4c5eff7b81dc2a64963676ecb0c1ce2648a516181afa8e6fae3d1c62550f6d8a8b08003e5f4cf3fb4713e397e7657a5664e1a6889e1359cc8a642723225f7b253971490281cfc4e78b054bc9244c50220e91e429913022613c22b20e97f1c068e2f2aff3929e13c9ea22f9998448c421327158b2e71d726ea06fa8fa45499860118d94c356c2253c10184d4c24e625b324622c2645229ac895e0da0cb320616afec6e5852a37a1d2181bf3679697f3ddef9dfd7ef28fa934c91bcd0cfd7606c6a31900bc41add8e5967879dbac1e3e5f4c03e20e47bd47d757439f1ff24f02f1225c5aa84b39496a5b892b9303ddbabeda3536e68f2a279904ba198f66c8ebe074698077d3c8d51dffd790309e62cf1b369e4af35feef2a00557257d170000000049454e44ae426082</data>
     </image>
     <image name="image2">
-        <data format="PNG" length="1175">89504e470d0a1a0a0000000d4948445200000016000000160806000000c4b46c3b0000045e49444154388da594cd6f5b4514c57f336fdeb31ddb71dc3876e37cb58d2008a9ddb4b45242da5d2540a20b56dd23f19fb0e10fe88a2d62c5ae14d42d155494865455489534a151523b893fe2b8b69fdff39bcbc2aed380f890b8d2d58c6671e6dc73cfbdeab3af3f1dddcf943efaeee05b2d08ff3716b34b76bef9f65db3e63ffd70f9ddeb5f6d3b5b6c353741291400fd5359cdc86192f8e1086ed3c3093428104fe8257b8499806ed6274c75399b9a64697299474f1fdd360f377fd2255e72397995e9ee2cc67171b5c1552ef9c65926da05f26379462f8e924ea7897931b4d6586b098280300cf17d9fb6dfc6740c5f3cfc9cf517bf692302e55689aaaa104511461b92a4c8ef4e329f7f8bab37ae928827504a9d4e4eee2282528a274f9e503dae2002060104ac8db062c1827714a3189f62696909473b0cb57fb3058ae1db9b9fbdc633088808910c80153855c3a51b97fa6c1094f451ba41975abd868d2c9ee7914ea749a552c3bfacd83f015b8894458ca5e7f4306d436e22c79b2e69341adcbd77173fd141bb1a2386582fcea837ca64719273e7ce61ad4586c08372c4b1881622d34322416bdd97482ce552994ab5c251f7087fac8d7634da2870155539a45c2bb1b5ff9cf1586e28d789c6a60f6c1d4b180f691c37181f1fc74696642a49329d2493c9d06eb709839056abc5f1ab631ab64190f6a9140e11d712b5a2132910c0806841103ab916ebebeb2c2e2ea21dcd68661485622c3376ca110854ab55f6f7f7d97db9cb7eb24c4bb5404023a044a10c886b11b134df69f068ed673636364eb94010446478a260626282858505ae5dbbc6c6fd4de22f1220e0388b5c3469f34961a2406422141ab4d09df5d9fd718f83df0f504a118fc58979b1a1b51ced606d44abd3a652af10d988b9b9391e7fbf422d5ff966d03c85361ae5284808ee5a9ceeb8cfe1072ff10f5aec6eed905819c10d3c8c31f47a21677267b872f90af1781c630cd65a0a8502538969cae5bdd71a0b3bfe0e3d2f20e6c4995c9b25511fa13175c4cef91d9ae926bef19157022d454aa5483c4e51ad56b9f5f1adbe52834ac63263a4caa37d60250a1ce8a80eb1469c9edfe3e6f59b743a1d567f59a5dc2d11793d7a233dac6369a957b81d975c2e376c8148df676118129968008cc2381aa515c7d906099ba63855a4582cb27c7d997aad4ea954a25eab1304019eeb31f3fe0c3333338391866eb78b710ca5831247e76b278cb57640d34fc5a9c866b364b3d9935d21270c013a9d0e5a6b1e3c78c061a64c30d23d61ec286738e7080441f077bbfc2f51a95478fe7c8bfb3fdca7fe5e151abc66acd1a291ae400841becb9d2fef309d9f666e768e62b1c8f89971d2e9349eeb2122b4db6d2a950aabbfaeb2b9b949c92dc1528476151c0d76450c8f6977166d3452065980ce7c93edda263bad6dcc8a87ae69c2e39028880070620677cc40019acb0dec48402159e0a052eeef8a8257882e64e679b6f28c8e6d9fae5101a9415ef8173dba506d57f0431f2c9199d233f7f6b6f76e975e959cff2cea3f472475eefd014d8e265c7480648a0000000049454e44ae426082</data>
+        <data format="PNG" length="1196">89504e470d0a1a0a0000000d4948445200000016000000160806000000c4b46c3b0000047349444154388d9d944b6c5b551086ff39f7e16bbb0e899dd68d13709336b6a9424bfa508a1b20155054b167018815944757ec10fb08212104ec2080aa0062c1a6a28b205425ad90005541a8a83caa5840121abb0d8e1becd8f7def31816690346346a19e92cce99339ffe333367089b58e183429140bbd3fde993678f9c559bddfdb7d93773ecff70ff6363e9d1cf325b7ac4e9c5cfc7003c753b60ebbf0e8bef15870e6edbf7456f2ae5882d82f625f6ed591dadcb85530b5ffe6ff0c8db231dbb93f9d9814cea8ed00d28e625904c75a387b71f098af2e2fce9f99f6e052cda760cea8d666606efeadef6a75d25dbb5216cc0e726eeccf68afbbb8b9f8cbd353674db8a8f268f7e3492dbf968b5631e9e1743c48ec226176042336c2119edb0549d1fe711bc5b3e530e6e49f1836f3cf8d2d0f6be27ca1d17e1c6052c0760a12139402b68a0deba86c5b545e4333bbafb13fd6700d066600280e29bc5070a5edf74905910c9418f3a624938aa038e4e40680f3a0482a644e5873f50fe7a05494a221e4bf87137ee1311856168b4d66066ae542acb4b4b4b457bcf6b7bfafad07d7ac9ff59c42c49b617010b050d09362d404ac8c0e0f7afaa38e88ee1f8f387e0ba2e84109e10c26b341ab87af52a8c3100804aa5929c98983864a7acae4f97cb0b895ac7651a105ba1b4821212c6f88032305220f035a2bfa630f2f408841030c6406b8d46a3815aadf677c12c0b9ee78199c9ee246f78452c536efb0eee897722261d6a7100210196122a24ac5d96383cfc08b4d6b8fe64044180d5d55580c060c0755d747575d1952b57d06c36d99ebfb6fc4c97d3f362fd17774bf37b6bb0bf28bc66be02e92bacd57dd46b6ba8fe28f150e149f8be0f2242a954c2c4e444688c59338129135328a55c2622e5fb7ec5b2ac336d953df6f2b1e37d79f9ce62f63c8c64846b8ca0c1087e73f0ecd65731303000224210042897cb606658d67ac7aeacacf0850b1716cae5f20bd3d3d3536db3421badc10ce53358034601ac004e84f8f6bb5964321910118410c864320000c7714044c866b3343c3c9c9d9a9a3a1586e160fbcfb3a00082f2192a6068c9308a6198f14d791a524ac46231c46231c4e371c4e371388e0321049819524a8c8e8eba4474a24db194521a8375c50ce810d00a301a907b2b78fdfd713eb0f330f2f93c398eb311974aa5904ea7a1940211c1b2ac7c1bd818238d11902d068860246fac586d1bba731e4acba5b9d98f67cf19632237e23a3b3b1f1e1f1fcf482921840080741b5869156825204380c47a1a5408d05202cfddf30a060707c9b6ed9c6559392202118199e1ba2ea2d1e80d289859b5815b7e2b943a02153048aca740870c6a09140a05f4f6f6221289c0719c8d6ed05a230c438461086646b55a45bd5e9f6d03d7fd7a330c04a4cf1016c0661d2cd47a5b398e03d775118944e0baee46c1aea71142084c4e4e0641104cb44fa831d8070a779f4b2623f7bab60b120430a1b1a4c490779fb76bd72ed8b6bdd10937141b63d06c36313333d3bc74e9d289b9b9b9939b8ebe7f5a2e97dbdb6ab5b237f3dbb65db32ceb7ca9540a00e02f6a802d996230443c0000000049454e44ae426082</data>
     </image>
     <image name="image3">
-        <data format="PNG" length="1207">89504e470d0a1a0a0000000d4948445200000016000000160806000000c4b46c3b0000047e49444154388dad94cf6b1d551cc53fdf7bef64decf24bce425d1983e9168c5626db58a11dcb87115a11404a95d08aebb17f10f70e7d68db82c5237565bdc68416d95823628a4066cd2d2d01f79c96be6bd79bfe6fe70f126692baec4031786e172e6ccf99eef9143a03e7ce289f707b76ef17f404f4df98fb7b73f336fc3a9573ffae8d33f3ef880e1cecebf5ebe3f3646ab50203586746c0c80429651f49eea60c04cbf8ff61e53a970f4934f583f752a3309c4df9e3e4dedcd37b1598632061d45a82822999aa23b3343796e8e67eb758ac522854201a514d639acb5f4fb7deeb75af87e1fe31c5f9d3e4d02b10980b396419a6207039431502ab13339c9f8a143bcf6e28b54aa559452281142080c8643b22c434410111a070ee0bd67f5da35bade13000310006f2dc17b7c08b4e318f5cc332c2d2d618c41004220b396b4dbdd27dc4308814aa582528a90bf5321270edee39d2388d02a14585a5a427285de7bb22ca3d3e910bcc7e52200a228228ee37dc23d3e13f22f3a6bc17b5496d1cfbdf4d6e27365699ab2b2b2c2fd6613e33d522850add55858586066668672a5f2e00ff6883da09c43bc27720e2997f1de13424089d049539acd26375757a9b5db94bc2712418ce1af9515fe9c98c0d4eb546a35fc238a73b3250494f78424211b0e898ca16f2d84c0f4d4146f2c2f93a62949bb4dabd9845e0fbdbbcb54a7c3f8ee2ecccf73d7b98786273252e03de23dc56e9776bb4da55219a9d61a2542258aa8d56ae87ca0ce7bd26e97cdcd4d6eadaf53bd7913d5eb3d181e2218118cf7b8103878fb36bf5cba84cd32420848188d4600ef3d36cbf0de23224c4e4cf0f4e222734f3dc5176b6b748c2100fa157869426479faf1c7d1d612e549d0ad16d7b28cd9b9398ac522da1874ae7c2f6ad970c84eb349abd9647a7a9a62b9cc95f575cadbdb5f8f3c1621d21a4418037ade53dadd65fac71ff9fdfa757a8d068f351ad4ebf5d1e6898c62e71cceb9fd583e7ff830dfd46ad441cc5e44d2ebd731698a944a7cffe4935444786c7393eada1a856e974de7f8358ad88963fcfc3ca5c545de397912a535d65a00e2b131aab51aed4a65f2412a8c4165196d113a5a73ecdd77d9d8d8e0ca6fbf31bbb545753060c15a1aced1be7387b5721911c1441100d65ac6e298e03d4129b56f85d11a11a19624846e97670f1ee4e89123b8e565b6b6b64892849d568ba4dde6e9d9595e9f9ba35aad62ad4580cc393a9d0ec9bd7bd493647b648508da8c1e55de0b5a6ba228a2582c323e3e3ef21170ce8d9acd39b23c35d65a0a71cc4f972f339e24f0f082481e134420cfae3186c898516e951a913887e49efabcb45cafc79fabab7c77ee1c2f6f6e72779f5804d19a0190794fc832ce9e3dcb0b870fd36834989d9da5582a3dd266d639badd2e1b376e70f5ea55ae5ebcc852af87d9dbbc90fba3e7e7a96acddde19063d6d23a7f9e1f2e5ce04badb96f0c3d119cd68852b87c4327a388a91058ecf7792bcb282d2cb0b1b1312276303878fc383f9f3b87e651d4f3b3af5484a1d628ef89f2dadcc33670efc60d9e3b71829b67ce0ce410a8a5387e4f06837ff2fe37c4b1bd34187cfe37b32557429dd0cf0b0000000049454e44ae426082</data>
+        <data format="PNG" length="1051">89504e470d0a1a0a0000000d4948445200000016000000160806000000c4b46c3b000003e249444154388da5954d6c545514c77ff7cd7bf3a66fec9419c66ac85866a480656823b4540d6984d02e6a49315186c452574d267e84c45056a40b76464c4c7463742709212cd5443786a07c98342206fc4a94a483a401479999ce4cdfbbefbd7b5da0d8daa17e9de4acceb9bf7bceffdc938bd69a7bf9e8e8e886e9e9e9cfc6c6c68656cb6be5426b4d2b1b1919e9181c1c9cefefef6f9b9b9b0b2f5ebcb8edf4e9d3575a26b730e35e819e9e9eabbdbdbd6d0b0b0be4f3f9483e9ffffce0c18389ff059e9a9a3a33383898a9d7ebc4e3718410ecd9b3c749a7d35fff67f0c4c4c4f11d3b76ec6a369b388e836ddb98a649341a656c6c2c33353575e65f830f1c3850e8ebeb3b1c8621b1588c582c86699a00f8be4f3c1e67787878d7e4e4e46bff185c2814ba73b9dc49a594b02c0bc771304d1321044a295cd7a552ad633b15f68d6f3a527ce5f04b7f0b3e74e8909d4ea72f856118f17d1fc7718846a3188681520adff7715d1715dee0e9fcb73cfb84cdde9dd1b70a85426e5570b95cbe2c84689f9f9fc7b66d1cc721128900a094424ac9a2e7b335fd25955fbab8f5836677f735b1ad7fcbd562b168b5048f8f8fbf914aa51e999d9dc5b66d2ccb426b8d528a300cef569b6c9b279baaf1f3774dcadfd731c21443bd8b4eb55afda425b8abab6bd4f77d366fde4c269321914820a5c4f77d8220c0f77d1aae47367e1e6dae45bb1554b386213cb6777ec1c0637d03adc066b95c1e073e8a46a31da55229a2b55eb37efd7a9acd26cd66934aa542e6c1451e5edb80b042441bc8868f65553130797ce3dc350142c3b2155eb1d2333333a1e33886699a482909114c0ecd92ed8c81f6287d1a61e17ac0d6e72a1048ed7b0df5fecd175e7e666ff1ed15c35b76931048299152120401dd992ad9b52e041508aa98d66d2ca302fe6d086e630ad7c8da678bc577b056056badb5e7794829316c9327b3e7c12d819c478435acb8c46ed78005465c0833c1a3a94b7d239daf4f2fd3b895f0524ab4d6e4375659677f038bb53fdac168da5033a1def8bd108411b1e9495c78fec8899b6f1e9f7ca0d1b262a5149ee7118d5b0ce7ce4250bb2b1140322b59b7737189742094c796fbce6d1aea78f7e83da5504a092925db726592e64fcb8306b8e5088b372c962aaa4188b029f2ed17268e9db8d0d9121c86a14a76b633b2f1dc9d012da9366c18dc3a95e0d70fe3b8a53fc90240796c68ff2a33d0f1f14c4b70ad56d3dbbb1b3894c1583e82484c11cf04c4521aab23fceb5181a14536f1e3beddc730570c4f6b7d2a34d74c92cc41bd0d1a25963ef5fbf7d7108295ff59db4310efa02d7063d06241005e3d7925b935f9c151fcc0bca3e09d6e57352db4d6a8eb72e0bd17f73f75f937432cd7525fcf43b80000000049454e44ae426082</data>
     </image>
 </images>
 <layoutdefaults spacing="6" margin="11"/>
